--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,50 @@
     color: tomato;
     text-align: center;
     margin-top: 80px;
-    font-size: 70px;
+    font-size: 100px;
 
 }
-
+@media (max-width: 1024px){
+    .tituloNovedades{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 700;
+    color: tomato;
+    text-align: center;
+    margin-top: 80px;
+    font-size: 30px;
+    }
+}
+.noticiasNonpa{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    color: rgb(0, 0, 0);
+    text-align: justify;
+    margin-bottom: 100px;
+    font-size: 30px;
+    margin: 15px;
+}
+@media (max-width: 768px){
+    .noticiasNonpa{
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 400;
+        font-size: 10px;
+        color: black;
+}
+}
 /* NOTICIAS */
 .flex-container{
-    display: flex;
+    display: grid;
     gap: 15px;
     margin: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+@media (max-width: 1024px){
+    .flex-container{
+    display: grid;
+    gap: 15px;
+    margin: 20px;
+    grid-template-columns: 1fr;
+}
 }
 .flex-container .flex-item img{
     width: 100%;
@@ -82,13 +117,39 @@
     text-align: justify;
     color: black;
 }
-
+.laHistoria{
+    margin-top: 80px;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: justify;
+}
+.laHistoria .parrafoHistoria .Espacios{
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: black;
+}
+@media (max-width: 768px){
+    .laHistoria .parrafoHistoria .Espacios{
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 400;
+        font-size: 10px;
+        color: black;
+}
+}
 /* footer */
 .flex-footer{
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     margin-top: 30px;
+}
+@media (max-width: 768px){
+   .flex-footer{
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 15px;
+}
 }
 .flex-footer div p{
     text-align: center;
@@ -97,12 +158,30 @@
     font-size: 20px;
     text-align: end;
 }
+@media (max-width: 768px){
+    .flex-footer div p{
+        text-align: center;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 400;
+        font-size: 10px;
+        text-align: start;
+        margin-left: 42px;
+}
+}
 .flex-footer .redes ul li{
     display: inline;
     padding: 0 5px;
     align-items: center;
 }
-
+@media (max-width: 768px){
+    .flex-footer .redes ul li img{
+        display: inline;
+        padding: 0 5px;
+        width: 20px !important;
+        height: auto !important;
+        justify-content: center;
+}
+}
 
 
 
